--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "graphqurl": "^0.3.3",
     "react-scripts": "3.4.0",
     "relay-compiler": "^9.0.0",
+    "relay-compiler-language-typescript": "^12.0.0",
     "relay-config": "^9.0.0",
     "relay-runtime": "^9.0.0",
     "typescript": "~3.7.2"
