--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-relay": "^9.0.0"
+    "react-relay": "^0.0.0-experimental-8cc94ddc"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
